# groundtruth

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.beads/: issues.jsonl
docs/: cli-reference.md  configuration.md  contributing.md  decision-frameworks.md  decision-tracking-guide.md  getting-started.md  meeting-best-practices.md
examples/: daily-gdrive-digest.py  sample-decision-tracker.csv  sample-output-Decisions.xlsx  sample-transcript-1.txt  sample-transcript-2.txt
src/groundtruth/: __init__.py  cli.py  config.py  formatting.py  generator.py  llm.py  manifest.py  models.py
src/groundtruth/defaults/: formatting.yaml
src/groundtruth/prompts/: __init__.py  decision_extraction.md  participant_detection.md
templates/: claude-prompt.md
tests/: README.md  __init__.py  conftest.py  test_config.py  test_extraction.py  test_llm.py  test_manifest.py
